# Fast-nnUNet

./: README.md
distillation/: README.md  fast_nnunet_distillation_export_onnx.py  fast_nnunet_distillation_train.py  fast_nnunet_resenc_distillation_export_onnx.py  fast_nnunet_resenc_distillation_train.py  nnunetv2_distillation_export_onnx.py  nnunetv2_distillation_train.py  setup.py
distillation/nnunetv2/dataset_conversion/: generate_dataset_json.py
distillation/nnunetv2/training/nnUNetTrainer/: nnUNetTrainer.py
distillation/nnunetv2/training/nnUNetTrainer/variants/: nnUNetDistillationTrainer.py
docs/: Distillation.md  Engine.md  Inference.md
engine/: CMakeLists.txt  README.md  fast_nnunet.cpp
engine/config/: fast_nnunet_bone_turbo.ini
inference/: README.md  main.py
inference/config/3d_fullres/: sample_config.json
inference/config/vtk_colors/: GenericAnatomyColors.txt
inference/example/: fast_nnunet_inference_example.py
inference/utils/: nnunetv2_torch_infer.py
